--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,5 +12,5 @@ jobs:
           node-version: 16
           cache: "npm"
       - run: ls -la ~
-      - run: npm ci
+      - run: npm ci --ignore-scripts --prefer-offline --no-audit
       - run: ls -la ~
