--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,12 +5,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - run: ls -la ~
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: "npm"
-      - run: ls -la ~
-      - run: npm ci
-      - run: ls -la ~
+      - run: ls ./gjlfjkldfgjklgf
+  testa:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "test success"
