--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - run: ls ./gjlfjkldfgjklgf
+      - run: ls ~
   testa:
     needs: test
     runs-on: ubuntu-latest
