--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,9 +5,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - run: ls ./gjlfjkldfgjklgf
-  testa:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "test success"
+      - uses: ./.github/workflows/reusable-workflow.yml
+        with:
+          username: "bobyb"
