updated ci workflow file

--- a/.github/workflows/check-source-branch.yml
+++ b/.github/workflows/check-source-branch.yml
@@ -47,5 +47,5 @@ jobs:
 
               core.setFailed()
             } else {
-              core.info("Head ref is ${ wantedHeadRef }... continuing.")
+              core.info(`Head ref is ${ wantedHeadRef }... continuing.`)
             }
