--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.8.0",
     "@scope/ui": "*",
     "next": "12.0.8",
     "react": "17.0.2",
