updated ci workflow file

--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -62,24 +62,22 @@ jobs:
           key: turbo-cache-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
             turbo-cache-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}-
-            turbo-cache-${{ runner.os }}-
 
       - name: Cache .next cache
         uses: actions/cache@v3
         with:
-          path: ${{ github.workspace }}/apps/${{ inputs.app_folder_name  }}/.next/cache
+          path: ${{ github.workspace }}/apps/${{ inputs.working_directory  }}/.next/cache
           key: nextjs-cache-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
             nextjs-cache-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}-
-            nextjs-cache-${{ runner.os }}-
 
       - name: Code Standards
         run: |
           npm run format:check
-          nps turbo run lint --filter=${{ inputs.turborepo_filter }}
+          npx turbo run lint --filter=${{ inputs.turborepo_filter }}
 
       - name: Build
-        run: turbo run build --filter=${{ inputs.turborepo_filter }}
+        run: npx turbo run build --filter=${{ inputs.turborepo_filter }}
 
       - name: Deploy
         env:
